--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-light fixed-top navbar-expand-lg">
       <div id="container" class="container-fluid container1">
         <a class="navbar-brand" href="index.html">
-          <img id="logo" src="img\logo1.png" alt="" class="logoNavbar">
+          <img src="img\logo4.png" alt="" class="logoNavbar">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -314,6 +314,30 @@
       </div>
     </div>
 
+    <!-- INFOFINAl -->
+
+    <div class="infoFinal">
+      <img src="img\main1.png" alt="" class="img1">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 imgSpaceFinal"><img src="img\ImgFinal.png" class="imgInfoFinal1" alt=""></div>
+          <div class="col-12 buttomInfo5 mx-auto">
+            <div class="container">
+              <div class="row">
+                <div class="col-6 textInfoborder3"><p class="textInfoFinal1">PACK 1</p></div>
+                <div class="col-6 textInfoFinal2">- Auditoría de marca<br>
+                                                  - Creación de manuales<br>
+                                                  - Conceptualización creativa<br>
+                                                  - Dirección gráfica<br>
+                                                  - Gestión de Redes Sociales<br></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 buttomInfo6 mx-auto">SABER MÁS</div>
+        </div>
+      </div>
+    </div>
+
     <!-- SCRIPTS -->
 
     <script src="js/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -333,21 +357,21 @@
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#menu1").offset().top > 1500) {
+        if ($("#menu1").offset().top > 2250) {
             $("#menu1").removeClass("buttomNav2"); 
         }
       });
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#menu1").offset().top > 2250) {
+        if ($("#menu1").offset().top > 3000) {
             $("#menu1").addClass("buttomNav2"); 
         }
       });
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#menu1").offset().top > 3000) {
+        if ($("#menu1").offset().top > 4500) {
             $("#menu1").removeClass("buttomNav2"); 
         }
       });
@@ -364,21 +388,21 @@
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#menu2").offset().top > 1500) {
+        if ($("#menu2").offset().top > 2250) {
             $("#menu2").removeClass("buttomNav2"); 
         }
       });
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#menu2").offset().top > 2250) {
+        if ($("#menu2").offset().top > 3000) {
             $("#menu2").addClass("buttomNav2"); 
         }
       });
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#menu2").offset().top > 3000) {
+        if ($("#menu2").offset().top > 4500) {
             $("#menu2").removeClass("buttomNav2"); 
         }
       });
@@ -395,56 +419,25 @@
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#menu3").offset().top > 1500) {
-            $("#menu3").removeClass("buttomNav2"); 
-        }
-      });
-    </script>
-    <script>
-      $(window).scroll(function() {
         if ($("#menu3").offset().top > 2250) {
-            $("#menu3").addClass("buttomNav2"); 
+            $("#menu3").removeClass("buttomNav2"); 
         }
       });
     </script>
     <script>
       $(window).scroll(function() {
         if ($("#menu3").offset().top > 3000) {
+            $("#menu3").addClass("buttomNav2"); 
+        }
+      });
+    </script>
+    <script>
+      $(window).scroll(function() {
+        if ($("#menu3").offset().top > 4500) {
             $("#menu3").removeClass("buttomNav2"); 
         }
       });
     </script> 
-    <script>
-      $(window).scroll(function() {
-        if ($("#menu4").offset().top > 750) {
-            $("#menu4").addClass("buttomNav2");
-        } 
-        else {
-            $("#menu4").removeClass("buttomNav2");
-        }
-      });
-    </script>
-    <script>
-      $(window).scroll(function() {
-        if ($("#menu4").offset().top > 1500) {
-            $("#menu4").removeClass("buttomNav2"); 
-        }
-      });
-    </script>
-    <script>
-      $(window).scroll(function() {
-        if ($("#menu4").offset().top > 2250) {
-            $("#menu4").addClass("buttomNav2"); 
-        }
-      });
-    </script>
-    <script>
-      $(window).scroll(function() {
-        if ($("#menu4").offset().top > 3000) {
-            $("#menu4").removeClass("buttomNav2"); 
-        }
-      });
-    </script>
     <script>
       $(window).scroll(function() {
         if ($("#container").offset().top > 695.5) {
@@ -457,21 +450,21 @@
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#container").offset().top > 1445.5) {
+        if ($("#container").offset().top > 2195.5) {
             $("#container").removeClass("container2"); 
         }
       });
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#container").offset().top > 2195.5) {
+        if ($("#container").offset().top > 2945.5) {
             $("#container").addClass("container2"); 
         }
       });
     </script>
     <script>
       $(window).scroll(function() {
-        if ($("#container").offset().top > 2945.5) {
+        if ($("#container").offset().top > 4445.5) {
             $("#container").removeClass("container2"); 
         }
       });
