--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             <div class="col-12 text3">Somos un equipo especializado en creatividad, siempre con el foco puesto en<br> 
                                       incrementar el valor de tu marca a través de la comunicación publicitaria.</div>
-            <div class="col-4 buttomHome">ESCRÍBENOS</div>
+            <div class="col-12 EspMain1"><p class="buttomHome">ESCRÍBENOS</p></div>
           </div>
         </div>
       </div>
@@ -79,7 +79,7 @@
             <div class="col-12 textInfoborder"><p class="textInfo2">y no conseguiste los resultados esperados.</p></div>
             <div class="col-12 textInfo3">No te preocupes, es parte del proceso. Y hay muchos casos como el tuyo.<br>
                                           Entendemos cómo te sientes y por eso queremos ayudarte</div>
-            <div class="col-5 buttomInfo1">IMPULSAR MI MARCA</div>
+            <div class="col-12 EspInfo1"><p class="buttomInfo1">IMPULSAR MI MARCA</p></div>
           </div>         
         </div>
       </div>
@@ -127,22 +127,21 @@
 
     <div class="info4">
       <img src="img\info1.png" alt="" class="imgInfo4-1">
-      <div class="container">
+      <div class="container EspInfo4-1">
         <div class="row">
           <div class="col-3"><img src="img\info41.png" class="imgInfo4-2" alt=""></div>
-          <div class="col-9 textInfo4-1">Sí, ya sabemos... nuestro nombre te recuerda a un pulpo, pero<br>
+          <div class="col-sm-9 textInfo4-1">Sí, ya sabemos... nuestro nombre te recuerda a un pulpo, pero<br>
                                          la verdad es que esa es la manera en la que vemos a nuestro<br>
                                          equipo de trabajo, porque metemos los tentáculos en todos los<br>
                                          rincones de la publicidad para <b>ayudar a tu negocio a generar<br>
                                          impacto relevante en la vida de tus clientes.</b></div>
           <div class="col-3"><img src="img\info42.png" class="imgInfo4-3" alt=""></div>
-          <div class="col-9 textInfo4-2">Somos jóvenes apasionados por crear ideas y creer en el poder<br>
+          <div class="col-sm-9 textInfo4-2">Somos jóvenes apasionados por crear ideas y creer en el poder<br>
                                          de la innovación. <b>Nuestro propósito es que nuestros<br>
                                          conocimientos en materia de marketing digital impulsen a tu<br>
                                          marca,</b> logren una buena difusión, obtenga un buen<br> 
                                          índice de recordación y presencia en los medios.</div>
-          <div class="col-8 space4"></div>
-          <div class="col-4 buttomInfo4">AGENDEMOS UNA REUNIÓN</div>
+          <div class="col-12 EspInfo4"><p class="buttomInfo4">AGENDEMOS UNA REUNIÓN</p></div>
         </div>
       </div>
     </div>
@@ -151,10 +150,10 @@
 
     <div class="info5">
       <img src="img\info1.png" alt="" class="imgInfo5-1">
-      <div class="container">
+      <div class="container container3 mx-auto">
         <div class="row">
           <div class="col-12 textInfo5-1">Los servicios que te ofrecemos:</div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info51.png" class="imgInfo5-2"></div>
@@ -171,7 +170,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info52.png" class="imgInfo5-2"></div>
@@ -188,7 +187,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info53.png" class="imgInfo5-2"></div>
@@ -205,7 +204,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info54.png" class="imgInfo5-2"></div>
@@ -223,7 +222,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info55.png" class="imgInfo5-2"></div>
@@ -241,7 +240,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info56.png" class="imgInfo5-2"></div>
@@ -257,7 +256,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info57.png" class="imgInfo5-2"></div>
@@ -274,7 +273,7 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
                   <div class="col-3"><img src="img\info58.png" class="imgInfo5-2"></div>
@@ -291,10 +290,10 @@
               </div>
             </div>
           </div>
-          <div class="col-4">
+          <div class="col-md-4">
             <div class="container">
               <div class="row">
-                  <div class="col-3"><img src="img\info57.png" class="imgInfo5-2"></div>
+                  <div class="col-3"><img src="img\info59.png" class="imgInfo5-2"></div>
                   <div class="col-9">
                     <div class="container">
                       <div class="row">
@@ -321,7 +320,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 imgSpaceFinal"><img src="img\ImgFinal.png" class="imgInfoFinal1" alt=""></div>
-          <div class="col-12 buttomInfo5 mx-auto">
+          <div class="col-12 buttomInfo5-1 mx-auto">
             <div class="container">
               <div class="row">
                 <div class="col-6 textInfoborder3"><p class="textInfoFinal1">PACK 1</p></div>
