--- a/index.html
+++ b/index.html
@@ -53,12 +53,8 @@
         <img src="img\main1.png" alt="" class="img1">
         <div class="container containerHome">
           <div class="row home1">
-            <div class="col-12">
-              <img src="img\main2.png" alt="" class="text1">
-            </div>
-            <div class="col-12">
-              <img src="img\main3.png" alt="" class="text2">
-            </div>
+            <div class="col-12 text1">Impulsa tu marca<br>
+                                y llega a más personas</div>
             <div class="col-12 text3">Somos un equipo especializado en creatividad, siempre con el foco puesto en<br> 
                                       incrementar el valor de tu marca a través de la comunicación publicitaria.</div>
             <div class="col-12 EspMain1"><p class="buttomHome">ESCRÍBENOS</p></div>
